Fix "unused variable" warning in JSLock https://bugs.webkit.org/show_bug.cgi?id=72213

Reviewed by Anders Carlsson.

Use ASSERT_UNUSED() instead of ASSERT() to make sure
that the variable is also used in the release build.

* runtime/JSLock.cpp:
(JSC::JSLock::lock):
(JSC::JSLock::unlock):


git-svn-id: svn://svn.chromium.org/blink/trunk@100080 bbb929c8-8fbe-4397-9dbb-9b2b20218538